tests/custom/dominance/01-typoAscDesc/stderr.expected
Error:
    dominance.essence:13:26:
After incomparability_function, expected one of ascending/descending, but got: desc
    incomparability_function desc |s|
                             ^
